# connectwise-psa-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: connecting.md  hosting.md
docs/superpowers/plans/: 2026-06-01-m1-trustworthy-read-only-core.md  2026-06-01-m2-hosted-passthrough.md
docs/superpowers/specs/: 2026-06-01-m1-trustworthy-read-only-core-design.md  2026-06-01-m2-hosted-passthrough-design.md
scripts/: new_gateway_token.py  smoke_live.py
src/connectwise_mcp/: __init__.py  __main__.py  auth.py  catalog.py  client.py  conditions.py  config.py  executor.py  gateway_auth.py  logging_setup.py  scope.py  server.py
src/connectwise_mcp/data/: openapi_get_filtered.json
tests/: test_catalog.py  test_config.py  test_executor_errors.py  test_gateway_auth.py  test_new_gateway_token.py  test_redaction.py  test_server_wiring.py  test_tool_metadata.py
