[project]
name = "connectwise-mcp"
version = "0.1.0"
description = "Read-only MCP gateway for ConnectWise Manage (PSA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
connectwise-mcp = "connectwise_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectwise_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/connectwise_mcp/data" = "connectwise_mcp/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
