[project]
name = "connectwise-mcp"
version = "0.1.0"
description = "Read-only MCP gateway for ConnectWise Manage (PSA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.3,<4",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
connectwise-mcp = "connectwise_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectwise_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/connectwise_mcp/data" = "connectwise_mcp/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# conditions.py holds a query-syntax cheatsheet whose example lines are
# intentionally long; wrapping them would change the runtime help text.
"src/connectwise_mcp/conditions.py" = ["E501"]
